--- a/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/layouts/_nav.html.erb
+++ b/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/layouts/_nav.html.erb
@@ -26,7 +26,7 @@
               </div>
               <%= link_to "Log out",
                   destroy_user_session_path,
-                  method: :delete,
+                  data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" },
                   class: "text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"  %>
             <% else %>
               <%= link_to "Sign Up",
