--- a/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/layouts/application.html.erb
+++ b/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <section class="py-12 px-6">
+    <section>
       <%= render "layouts/nav" %>
       <div class="container mx-auto">
         <div class="mt-6">
