Add real-time favorite count updates with Turbo Frames and Streams

--- a/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/favorites/create.turbo_stream.erb
+++ b/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/favorites/create.turbo_stream.erb
@@ -3,3 +3,5 @@
 <%= turbo_stream.update("no-favorites") do %>
   &nbsp;
 <% end %>
+<%= turbo_stream.update("favorites-count", plain: current_user.favorites.count) %>
+
