--- a/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/favorites/destroy.turbo_stream.erb
+++ b/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/favorites/destroy.turbo_stream.erb
@@ -5,3 +5,5 @@
     No favorite concerts yet
   <% end %>
 <% end %>
+<%= turbo_stream.update("favorites-count", plain: current_user.favorites.count) %>
+
