--- a/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/layouts/_nav.html.erb
+++ b/Modern-Frontend-Rails-Hotwire-and-React/north_by_seven_app/app/views/layouts/_nav.html.erb
@@ -28,6 +28,18 @@
                   destroy_user_session_path,
                   data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to log out?" },
                   class: "text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium"  %>
+              <div class="flex justify-items-end text-gray-300
+                          px-3 py-2 text-sm font-bold">
+                <span>Favorite Count:</span>
+                <%= turbo_frame_tag(
+                      "favorites-count-number",
+                      src: favorites_path(count_only: true)
+                    ) do %>
+                  <span id="favorites-count" class="ml-2">
+                    ?
+                  </span>
+                <% end %>
+              </div>
             <% else %>
               <%= link_to "Sign Up",
                     new_user_registration_path,
